--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
     body {
-      background-color: #f0f0f0; /* Light gray background */
+      background-color: #081b29;; /* Light gray background */
       color: #333; /* Dark gray text */
     }
     .navbar {
@@ -63,7 +63,7 @@
   <section id="about" class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6" style="color: #d2caef;">
           <h2>About Me</h2>
           <p>Kishor Shinde, a passionate software developer with 2 years of experience in developing web-based applications using Java, Angular, Spring Boot, and microservices. Currently working at Austere System private Limited, Pune.</p>
         </div>
