--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     .text-light {
       color: #fff !important; /* White text color */
     }
+
+    .btn-primary {
+    color: #fff;
+    background-color: #334251;
+    border-color: #007bff;
+}
     
   </style>
 </head>
@@ -91,14 +97,14 @@
       <div class="row">
         <!-- Project 1 -->
         <div class="col-md-4">
-            <div class="card">
+            <div class="card" style="border-radius: 40px;">
               <!-- Replace with your project image -->
-              <img src="syndeo.png" alt="Project 1" class="card-img-top">
+              <img src="syndeo.png" alt="Project 1" class="card-img-top" style="border-radius: 100px;">
               <div class="card-body">
                 <h5 class="card-title">Syndeo Healthcare Project</h5>
                 <p>Collaborated with a 15-member team in the USA, managing backend operations with Java, Spring Boot, and Microservices.</p>
                 <!-- View Details button triggers modal -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#projectModal1">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#projectModal1" style="border-radius: 20px;">
                   View Details
                 </button>
               </div>
@@ -108,7 +114,7 @@
           <!-- Modal -->
           <div class="modal fade" id="projectModal1" tabindex="-1" aria-labelledby="projectModalLabel1" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
-              <div class="modal-content">
+              <div class="modal-content" style="border-radius: 40px;">
                 <div class="modal-header">
                   <h5 class="modal-title" id="projectModalLabel1">Syndeo Healthcare Project - Project Details</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -127,7 +133,7 @@
                   </ul>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal" style="border-radius: 20px;">Close</button>
                 </div>
               </div>
             </div>
@@ -136,14 +142,14 @@
 
         <!-- Project 2 -->
         <div class="col-md-4">
-            <div class="card">
+            <div class="card" style="border-radius: 40px;">
               <!-- Replace with your project image -->
-              <img src="crm.png" alt="Project 2" class="card-img-top">
+              <img src="crm.png" alt="Project 2" class="card-img-top" style="border-radius: 100px;">
               <div class="card-body">
                 <h5 class="card-title">Vendor Portal (CRM)</h5>
                 <p>Developed using Java, Spring Boot, Spring Security, JPA, and MySQL. Achieved a 30% increase in data retrieval efficiency.</p>
                 <!-- View Details button triggers modal -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#projectModal2">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#projectModal2" style="border-radius: 20px;">
                   View Details
                 </button>
               </div>
@@ -153,7 +159,7 @@
           <!-- Modal -->
           <div class="modal fade" id="projectModal2" tabindex="-1" aria-labelledby="projectModalLabel2" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
-              <div class="modal-content">
+              <div class="modal-content" style="border-radius: 40px;">
                 <div class="modal-header">
                   <h5 class="modal-title" id="projectModalLabel2">Vendor Portal (CRM) - Monte Carlo - Project Details</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -173,7 +179,7 @@
                   </ul>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal" style="border-radius: 20px;">Close</button>
                 </div>
               </div>
             </div>
@@ -182,16 +188,16 @@
 
         <!-- Project 3 -->
         <div class="col-md-4">
-            <div class="card">
+            <div class="card" style="border-radius: 40px;">
               <!-- Replace with your project image -->
-              <img src="acb.png" alt="Project 2" class="card-img-top">
+              <img src="acb.png" alt="Project 3" class="card-img-top" style="border-radius: 100px;">
               <div class="card-body">
                 <h5 class="card-title">Anti-Corruption Bureau</h5>
                 <p class="card-text">
                   Led the end-to-end development of a user-friendly case management system using Java, Spring Boot, JPA, and MySQL.
                 </p>
                 <!-- Read More button triggers modal -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#projectModal">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#projectModal" style="border-radius: 20px;">
                     View Details
                 </button>
               </div>
@@ -201,7 +207,7 @@
           <!-- Modal -->
           <div class="modal fade" id="projectModal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
-              <div class="modal-content">
+              <div class="modal-content" style="border-radius: 40px;">
                 <div class="modal-header">
                   <h5 class="modal-title" id="projectModalLabel">Anti-Corruption Bureau - Project Details</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -220,7 +226,7 @@
                   </ul>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal" style="border-radius: 20px;">Close</button>
                 </div>
               </div>
             </div>
