--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section id="about" class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6" style="color: #d2caef;">
+        <div class="col-md-6" style="color: white;">
           <h2>About Me</h2>
           <p>Kishor Shinde, a passionate software developer with 2 years of experience in developing web-based applications using Java, Angular, Spring Boot, and microservices. Currently working at Austere System private Limited, Pune.</p>
         </div>
@@ -93,7 +93,7 @@
   <!-- Projects Section -->
   <section id="projects" class="py-5">
     <div class="container">
-      <h2>Projects</h2>
+      <h2 style="color: white;">Projects</h2>
       <div class="row">
         <!-- Project 1 -->
         <div class="col-md-4">
